# packages/api-types/index.ts
@@ -22,6 +22,8 @@ export type Contact = Schemas["ContactOut"];
 export type ContactCreate = Schemas["ContactCreate"];
 export type ContactUpdate = Schemas["ContactUpdate"];
 export type Visit = Schemas["VisitOut"];
+export type VisitCreate = Schemas["VisitCreate"];
+export type VisitOutcome = Schemas["VisitOutcome"];
 
 export type Product = Schemas["ProductOut"];
 export type ProductCreate = Schemas["ProductCreate"];
